--- a/main-process-api/index.html
+++ b/main-process-api/index.html
@@ -10,10 +10,15 @@
       html { font-family: sans-serif; background: #2B2E3B; color: #9FEAF9; }
     </style>
   </head>
-  <body>
+  <body style="user-select: none; -webkit-app-region: drag;">
 
     <h1>Hello Electron!</h1>
     <p>Build cross-platform desktop apps with JavaScript, HTML, and CSS</p>
+
+    <br>
+    <br>
+    
+    <input type="range" name="range" min="0" max="10" style="-webkit-app-region: no-drag;">
 
     <script>
       // You can also require other files to run in this process
